manifests/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      automountServiceAccountToken: false
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.33.0
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: pv-storage
              mountPath: /data
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
      volumes:
      - name: pv-storage
        persistentVolumeClaim:
          claimName: pvc
