manifests/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
      name: http
  selector:
    app: vaultwarden
  type: ClusterIP
